--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=4000
-DATABASE=mongodb+srv://124tranvita:<PASSWORD>@cluster0.xjedx.mongodb.net/mmo?retryWrites=true&w=majority
+DATABASE=mongodb+srv://124tranvita:<PASSWORD>@cluster0.xjedx.mongodb.net/piggy?retryWrites=true&w=majority
 DATABASE_PASSWORD=mmoVN
 
 JWT_SECRET=oplonrvfieoajzmqylozrqpawouynvrn
