--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "simple and easy budget management project",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
     "debug": "nodemon --inspect server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
